[project]
name = "radio-sentiment"
version = "0.0.1"
description = "A tool to analyze the sentiment on environmental topics of radio transcripts."
authors = [
    {name = "David Maier", email = "david@davidmaier.at"},
]
dependencies = [
    "marimo>=0.3.12",
    "openai>=1.17.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "httpx>=0.27.0",
    "schedule>=1.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start.cmd = "marimo edit src/transcript_analyzer.py"
start.env_file = ".env"
